--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,31 +1,29 @@
 ---
-title: 七哥谈中共和哈萨克斯坦（三）
+title: 中共安排维族运动员传递奥运圣火作秀 遭美国猛批
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1968216/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968244/)
 
-整理：雅典娜速记组
-编辑：tianzhihuan
+撰稿：东京樱花团/asket
 
-在他们心里边儿，夏威夷就是海南，而且在北京有房子，上海有房子。这个国家完全腐败，共产党利用这种蓝金黄，把整个的东欧这几个国家全部给控制了。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/中共安排维族运动员传递奥运圣火作秀-遭美国猛批.png)
 
-所以当你江家王岐山，你都要陈锋有多牛，我在那儿，他们竟然问我，哎，你认识陈锋吗？陈老板吗？我，我很惊讶。他说，我们这块儿的大人物啊当时是谁呀？陈锋、王健，人才不，他们不但要马云的啊，都是江家王岐山派康典、田国立、田惠宇，又我一说，这都是岐山派啊。
+[图片来源](https://www.sohu.com/a/520617568_260616)
 
-那个房间之大，大概700-800平方米。上面的大灯，那种夸张的风格，那种翡翠绿啊，那个屋顶啊，灯花又闪，旁边人跳着舞，这个吃的一大长桌五六米，桌子上摆着各种肉，各种酒。他说，这都是中国的朋友来独享的。我说完了，这个国家彻底完了。
+据法新社2月6日报道，因新疆的人权受到侵犯，美国及其一些盟国选择在外交上抵制中国北京冬奥会。为了回应对新疆人权的批评，中共特意安排一名维吾尔族运动员参与北京冬奥会开幕式火炬传递进行作秀。
 
-所以说兄弟姐妹，今天你看到哈萨克啊，他不是今天，他是一个中俄之间共产主义蔓延，共产主义统治全世界必然发生的结果。
+新疆是越野滑雪运动员20岁的迪尼热-依拉木江的出生地，她与中国另一位运动员赵嘉文是开幕式上最后一名火炬手。迪尼热-依拉木江来自新疆北部的阿勒泰，这个山区是中共声称发明滑雪运动的地方。
 
-这个哈萨克的纳扎尔巴耶夫和他女儿阿莉婭呢，一定最后和罗马尼亚齐奥塞斯库一样的结果。我今天可以在这儿说个没有任何人知道咱们我说的这个东西，没有人知道就是王毅去了，最后给了美帝国主义了，发现了嘛，俄罗斯成功推给美帝国主义了吧，黄金的事情就更没人知道了。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/七哥谈中共和哈萨克斯坦（三）-.jpg)
-2022年1月7日文贵大直播
+据美国大使周日在美国有线电视新闻网(CNN)上说：“这是中国当局试图转移我们对真正问题的注意力，即维吾尔人正在遭受酷刑，维吾尔人正在遭受中国的虐待，我们需要把这个问题放在首要关注位置。”
 
-*发布：tianzhihuan*
-更多资讯，请关注：
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+据美国驻联合国大使琳达.托马斯.格林菲尔德称，“我们知道那裡发生了种族灭绝，”琳达-托马斯-格林菲尔德批评说，”我们已经谴责了它，总统（乔-拜登）也做了谴责。” 据格林菲尔德说，”我们已经明确表示，中国正在明知故犯地实施这些反人类罪行。”当被问及将就人权问题发言的美国运动员在当地的安全问题时，她说她 “希望中国不会对他们採取任何行动”。”格林菲尔德补充说：“我们的目标是确保我们的运动员安全，我们正在尽一切努力来做到这一点。”
 
+信息来源：
+
+[美國批評中國讓新疆運動員最後一棒傳遞奧運聖火](https://www.rfi.fr/tw/%E4%B8%AD%E5%9C%8B/20220206-%E7%BE%8E%E5%9C%8B%E6%89%B9%E8%A9%95%E4%B8%AD%E5%9C%8B%E8%AE%93%E6%96%B0%E7%96%86%E9%81%8B%E5%8B%95%E5%93%A1%E6%9C%80%E5%BE%8C%E4%B8%80%E6%A3%92%E5%82%B3%E9%81%9E%E5%A5%A7%E9%81%8B%E8%81%96%E7%81%AB)
+
+*编辑：东京樱花团/喜马拉雅的微尘
+发布：东京樱花团/老黑*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
