--- a/gnews/24.md
+++ b/gnews/24.md
@@ -1,27 +1,27 @@
 ---
-title: 拜登放弃对伊朗制裁
+title: 英国军方最新报告警告来自太空的核攻击
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1968062/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1968088/)
 
 翻译：  Evalu
-![](https://assets.gnews.org/wp-content/uploads/2022/02/2-19.jpg)
-图片来源：posts.careerengine.us
+![](https://assets.gnews.org/wp-content/uploads/2022/02/3-10.jpg)
+图片来源：www.secretchina.com
 
-美国合众社2月5日报道，拜登政府重新恢复2015年谈判期间的放弃对伊朗的制裁。美国全国广播公司和CNN新闻均报道了国务院周五通知国会立法者对伊朗的民用核项目放弃制裁。
+零对冲网2月6日报道，随着中俄两国雄心勃勃发展更强有力的武器包括超音速导弹，可以通过发射至地球大气层后针对地球另一半的目标发起攻击，难怪更多的西方政府正在检查其能力，即在人类的“最终前沿”—-太空方面，不仅是进攻性，也包括防御性。
 
-该放弃制裁决定将允许国家间在某些不扩散的情况下可以进行合作。这种不扩散活动将回到当时的国际核协议上，当时伊朗只需要几个星期就可以生产武器级别的核弹材料。
+由英国国防部本周发布的一项新的报告，权威机构警告说攻击者可能潜在性地发展外太空的核武器，可以导致“民用设施或可能是针对目标的永久性的杀伤性武器”。
 
-而伊朗否认其有生产核武器的计划。川普政府于2018年再认证到期前收回了奥巴马时代的联合全面行动计划，称这是一个核心部分缺陷的东西，重新实施制裁。
+该报告称到目前为止政府为其公民日常生活所能提供的保护，將有赖于对太空的控制。英国的对手很有可能在未来的战争中很快超越。
 
-由于撤除了该计划，伊朗已经添加了铀浓缩供应井，违背了原来的承诺并拒绝了国际原子能机构人员进入核心区域。
+而在“太空优势”方面的维持控制是关键的，危险来自从网络攻击和电磁攻击到外太空的核攻击，例如由卫星制导的核导弹或从太空发射的导弹等。
 
-有官员说：” 如果不放弃制裁，有关与第三方针对堆积物的处理方面的详细技术讨论和其他不扩散价值的活动就无法开展。
+报告的结论很明确，英国和同盟国必须计划并投资，因为决定性的“太空竞赛”已经开始了。
 
-本周早些时候，欧洲的合作者们在促进使美伊双方回到谈判桌上起了重要作用，国务院高级官员说根据目前伊朗的核项目，要回到2015年最初的协议将不太可能。
-
-##### 新闻来源： [Biden administration restores Iran sanctions waiver](https://www.upi.com/Top_News/US/2022/02/05/biden-restores-iran-sanctions-waiver-deadline-nuclear-deal-nears/6631644075537/)
+##### 新闻来源： [UK Military Warns About Risk Of Nuclear Attacks From Space In New Report](https://www.zerohedge.com/geopolitical/uk-military-warns-about-risk-nuclear-attacks-space-new-report)
 
 #  
+
+
 
  
 
