--- a/gnews/25.md
+++ b/gnews/25.md
@@ -1,50 +1,33 @@
 ---
-title: 单伟健在杨贝贝虚假采访背后的金融运作
+title: 北京冬奥奥运团队开始对隔离酒店条件吐槽
 ---
-`加拿大温哥华扬帆农场 Himalaya Sailing Farm (CA)` [轉載自GNews](https://gnews.org/zh-hans/1968053/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1968080/)
 
-加拿大温哥华扬帆农场：薇文viven
+编译：花岗岩
+![](https://assets.gnews.org/wp-content/uploads/2022/02/1-95.jpg)
+图片来源：网路图片
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/a-3-edited.jpg)图片来源：weibo
+据美联社北京2月6日报道，一些不幸在北京奥运会上被检测出中共病毒（冠状病毒）阳性的奥运运动员认为他们的隔离条件使糟糕的情况变得更糟，食物不足，无法食用的饭菜，没有训练设备。
 
+俄罗斯冬季两项运动员瓦莱里娅·瓦斯涅佐娃（Valeria Vasnetsova）在Instagram上从北京的一个所谓的隔离酒店发帖说，“我的胃很痛，脸色很苍白，眼睛周围有巨大的黑眼圈，我希望这一切都能结束。我每天都在哭，实在太累了”。
 
-前段时间HBO Vice 散播种族歧视和恶意诋毁爆料革命和郭文贵先生的视频，背后有中共巨资借用“腾讯音乐娱乐”(TME)操作平台，利用海外金融投资公司“太盟集团”(PAG)  和“德太资本”(TPG)，通过中共特务单伟建和王岐山家族的孙强两人处心积虑运作的结果。
+她的问题不是病毒的任何症状，而是食物。瓦斯涅佐娃周四发布了一张她所说的 “已经吃了五天的早餐、午餐和晚餐 ”的照片，托盘上的食物包括普通意大利面、橙汁、骨头上的焦肉、一些土豆，没有蔬菜。
 
-单伟建的太盟在2017年持股9.8%成为 TME的第二大股东；2018年 腾讯音乐在美国上市，太盟靠出售美国存托凭证募资$5,700 万美元，并继续持股 9% ；
+她说，她主要靠几块意大利面生存，因为“不可能 ”吃其他东西，“但今天我吃了他们提供的所有脂肪，而不是肉，因为我非常饿。”她补充说，她的体重下降了很多并且骨头已经显现出来了。
 
-华纳公司旗下的HBO2013年与腾讯签约入驻中国，2018年因主持人嘲讽习近平为“维尼熊”后，一直被中共封杀，失去每年近50%增长的华纳损失惨重。
+隔离酒店越来越成为此次奥运运动员及其团队的批评对象，他们正在游说组织者进行改进。隔离缺乏透明度，只有一些病毒呈阳性的运动员被迫进入其团队无法进入的隔离酒店，而处于类似情况的队友则被允许在奥运村内进行隔离。
 
-单伟建出手使用金融手段控制华纳： TME投资 “华纳音乐”的股权2%、双方成立合资公司、允许华纳音乐向TME的经营者授权，华纳公司和华纳音乐的股价双双开始飙升。
+对检测出阳性的运动员的规定是，没有症状的人要到专门的酒店进行隔离。任何有症状的中共病毒患者将被送往医院。在这两种情况下，他们将不能参加比赛，直到被允许出院。
 
-孙强运作的德太资本2017年就已投资 HBOVice 达$4.5亿，2019年，有中金资本的平台撑腰，又注资$4500万美元，助HBOVice上市，但至今未成功。
+各国代表队已经开始公开批评。
 
-中共蓄谋已久，花费高昂代价，吃准华纳和HBO逐利的贪婪本性，用单伟建和孙强两路夹击，犁庭扫穴，使之成为中共作恶的工具和替罪羊。中共因惧怕新中国联邦而导致的又一愚蠢行径，不断为全球灭共逆增上缘。
+在三届北欧综合运动会金牌得主埃里克·弗伦泽尔检测出阳性后，德国代表团团长德克·希梅尔普芬尼格（Dirk Schimmelpfennig）对 “不合理 ”的生活条件进行了抨击。他在FAZ报纸报道的评论中说，德国希望有更大、更卫生的房间，以及更正规的食物供应，以便最终被释放的运动员仍然适合参加比赛。
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/f.jpg)图片来源：GNEWS
+比利时俯式雪橇运动员金·梅勒曼斯被从隔离酒店带回了运动员村的隔离区，她的主要怨言是缺乏信息。她被装进一辆救护车，在她以为自己会被释放的那一天从一个隔离设施运到另一个隔离设施。
 
+瓦斯涅佐娃在隔离区的时间发现运动员们得到的食物更差，并用一张为她同样隔离的队医提供的食物图片强调了这一点。她不明白，为什么对运动员有这种态度？
 
-参考资料：
-
-[Tencent Music Entertainment: China’s Largest Online Music Entertainment Platform Operator](https://seekingalpha.com/article/4412340-tencent-music-entertainment-online-music-entertainment-platform-operator)
-
-[HBO Website Is Down in China After John Oliver Skewers Xi Jinping on Last Week Tonight](https://time.com/5321945/hbo-china-john-oliver-xi-jinping/)
-
-[Private Capital-backed Tencent Music Raises US$1.1 Billion in Initial Public Offering (Asia)](https://www.globalprivatecapital.org/newsroom/private-capital-backed-tencent-music-raises-us1-1-billion-in-initial-public-offering-asia/)
-
-[SEC FORM F-1 Tencent Music Entertainment Group 2018.10](https://www.sec.gov/Archives/edgar/data/1744676/000119312518290581/d624633df1.htm)
-
-[Warner Music Partners With Tencent on Joint Venture Record Label in China](https://www.hollywoodreporter.com/news/music-news/warner-music-partners-with-tencent-on-joint-venture-record-label-in-china-4154621/)
-
-[腾讯音乐娱乐集团(TME)公司深度报告](http://pdf.dfcfw.com/pdf/H3_AP201901281289167588_1.pdf)
-
-[TPG与中金资本成立 “中国协同效应”平台](https://www.financialnews.com.cn/zq/pevc/201901/t20190110_152759.html)
-
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/e-edited.jpg)图片来源：sjmrw
-
-
-* * *
-
-编辑发稿：硫酸羟氯喹64
+新闻来源：[Olympic teams raise concerns over quarantine hotels](https://apnews.com/article/winter-olympics-quarantine-hotels-e2d2ffc60d9800cf1951cc3eaed323cb)
 
  
 
