--- a/gnews/28.md
+++ b/gnews/28.md
@@ -1,31 +1,25 @@
 ---
-title: 2022年2月6日 晚 新中国联邦新闻、GTV新闻访谈简报
+title: 俄罗斯入侵将在几天内造成5万名乌克兰人伤亡
 ---
-`纽约香草山MOS01` [轉載自GNews](https://gnews.org/zh-hans/1968020/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1968048/)
 
-作者：香草山翻译部
+#### 撰稿：彩虹       
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/GNEW-GTV-MOS-LOGO-3.jpg)
+#### 责编：白夜
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-613.png)图片来源：波士顿先驱报
+2月6日，《新闻极限》报道，虽然拜登政府在其关于俄罗斯可能入侵乌克兰的信息传递中放弃了“迫在眉睫”一词，但国会国防部的一份简报告诉国会议员们，俄罗斯可以在72小时内拿下基辅（Kyiv），全面入侵将造成多达5万名乌克兰人伤亡。
 
+消息人士告诉《福克斯新闻》记者雅克·海因里希（Jacqui Heinrich），参谋长联席会议主席马克·米利（Mark Milley）将军上周告诉众议院和参议院的简报会，乌克兰首都基辅可能在72小时内被（俄军）攻下，代价是4000名俄罗斯军人和15000名乌克兰军人付出生命。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/text-SC-5.png)
-校对：Stay文苑
+在另一份预测（俄军）大规模入侵和5万人伤亡的报告中，一位欧洲官员告诉《华盛顿邮报》（The Washington Post）说：“我们担心的是，你不会把战斗群在另一个国家的边境上两次（集结）却啥也不做。我认为这正是我真正担心的，（普京）现在把兵力集中在那里，即使他还是什么也不做……广大国际社会会作何感想？”
 
-编辑：Stay文苑
+一位消息人士告诉海因里希，预期乌克兰人将会逃离，美国和欧洲盟友正在为难民和移民危机整合资源。
 
-发稿：Stay文苑
+文章说，目前，有10万到13万名俄罗斯军人在乌克兰边境集结，目前已经达到了全面入侵乌克兰所需（兵力）的70%。
 
-新闻： [https://gtv.org/broadcast/watch/620076043621aa7415d6dac6](https://gtv.org/broadcast/watch/620076043621aa7415d6dac6)
-访谈： [https://gtv.org/broadcast/watch/62007fd13621aa7415d6e11d](https://gtv.org/broadcast/watch/62007fd13621aa7415d6e11d)
+**新闻来源**
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-callendar.jpeg)
-
-**更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+[Russia Invasion Would Cost 50,000 Ukrainian Casualties Within Days](https://www.newsmax.com/newsfront/invasion-casualties-markmilley-war/2022/02/06/id/1055680/)
 
  
 
