--- a/gnews/39.md
+++ b/gnews/39.md
@@ -1,17 +1,17 @@
 ---
-title: 有声&#124;普京首次就俄罗斯与乌克兰冲突发表公开谈话，提出解决条件
+title: 有声&#124;美国国税局不会对未售出的质押加密货币作为收入征税
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1966772/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1966774/)
 
-配音：香草山教育部 – Rose
+配音：香草山巡管部 – 格格
 ![This image has an empty alt attribute; its file name is image-40-1-11.png](https://assets.gnews.org/wp-content/uploads/2021/10/image-40-1-11.png)
-据媒体报导，俄罗斯总统普京于2月1日公开批评西方忽视莫斯科的安全疑虑，希望能结束不断升温的紧张局势。这是普京首次就俄罗斯与乌克兰冲突发表公开谈话。
+当地时间2月3日消息，美国国税局在未来可能不会对未售出的质押加密货币作为收入征税，该决定是将质押奖励归类为财产而非应税收入。
 
-普京在莫斯科与匈牙利总理奥班（Viktor Orban）会谈后的记者会上表达了上述观点。他重申，美国及其盟友忽视了俄罗斯的首要安全关切，要求北约（NATO）拒绝乌克兰加入并从俄罗斯附近撤走武器装备。
+报道称，2021年5月26日约书亚和杰西卡.贾莱特夫妇向美国田纳西州中区地方法院提交法律诉状，要求退还2019年因收到8876枚Tezos代币而支付的3293美元所得税。据知情人士透露，美国国税局已批准全额退还他们通过质押获得的代币的税款。
 
-俄国要求北约就停止扩张给予有法律约束力的安全保证，以及勿在俄国边界附近部署攻击设施，还要北约将军事部署恢复至1997年以前的状态。与此同时，美国务卿布林肯于2月1日重申美国对乌克兰主权和领土完整的承诺的重要性，敦促俄国从乌克兰边界撤军，立即让情势降温。英国首相约翰逊（Boris Johnson）也敦促俄罗斯后退并以外交方式展开对话，避免造成更大的灾难。
+专业人士分析，喜币H-Coin就是最好的数字黄金抵押品，拥有者根本不需要卖出，需要现金时在数字银行抵押贷款即可。
 
-文字版原文：[普京首次就俄罗斯与乌克兰冲突发表公开谈话，提出解决条件](https://gnews.org/zh-hans/1965001/)
+文字版原文：[美国国税局不会对未售出的质押加密货币作为收入征税](https://gnews.org/zh-hans/1956578/)
 
 音频处理：呼吸的雾霾（文小呼吸）
 发稿：呼吸的雾霾（文小呼吸）
