--- a/gnews/40.md
+++ b/gnews/40.md
@@ -1,13 +1,15 @@
 ---
-title: 有声&#124;2022年2月5日 晚 新中国联邦新闻、GTV新闻访谈简报
+title: 有声&#124;甜蜜蜜运动的三个回合
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1966771/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1966773/)
 
 配音：香草山教育部 – Rose
-![This image has an empty alt attribute; its file name is image-40-1-11.png](https://assets.gnews.org/wp-content/uploads/2021/10/image-40-1-11.png)![](https://assets.gnews.org/wp-content/uploads/2022/02/text-SC-4.png)
+![This image has an empty alt attribute; its file name is image-40-1-11.png](https://assets.gnews.org/wp-content/uploads/2021/10/image-40-1-11.png)
+在2月2日的大直播中，郭文贵先生谈到甜蜜蜜灭共运动的三个回合。 第一个回合是美国大使馆的授权撤离。第二个回合，就是今年的三首灭共歌曲，即《甜蜜蜜》、《一帘幽梦》和《塞北的雪》。第三个回合就是对着中共的冬奥会去的。郭先生在直播中宣布，他现在正式向中共高层发出战书，要把中共的冬奥会，变成冬眠会。郭先生说，明人不做暗事，他从来不使用背后的阴招。虽然共产党通过黑客技术黑了郭先生的手机，但是却无法挡住甜蜜蜜运动的强势展开。
 
+郭先生说，他的第三个回合，一定会把中共冬奥会打残，打成冬眠会。因为没有任何人比他更了解中共冬奥会的来龙去脉，尤其是它的选址及其致命弱点。虽然中共有230万所谓的人工造雪弹，但是郭先生绝对有办法让它们无法达到目的。
 
-文字版原文：[2022年2月5日 晚 新中国联邦新闻、GTV新闻访谈简报](https://gnews.org/zh-hans/1963265/)
+文字版原文：[甜蜜蜜运动的三个回合](https://gnews.org/zh-hans/1965073/)
 
 音频处理：呼吸的雾霾（文小呼吸）
 发稿：呼吸的雾霾（文小呼吸）
