--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,29 +1,23 @@
 ---
-title: 中共安排维族运动员传递奥运圣火作秀 遭美国猛批
+title: 樱花头条┃拜登政府正准备公布首个亚太地区经济战略
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968244/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968282/)
 
-撰稿：东京樱花团/asket
+撰稿：东京樱花团/樱花传媒
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/中共安排维族运动员传递奥运圣火作秀-遭美国猛批.png)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/拜登政府正准备公布首个亚太地区经济战略.jpg)
 
-[图片来源](https://www.sohu.com/a/520617568_260616)
+在中共不断扩大地区影响力的大背景下，这份经济战略一直为美国盟友和美国商业团体所期待。
 
-据法新社2月6日报道，因新疆的人权受到侵犯，美国及其一些盟国选择在外交上抵制中国北京冬奥会。为了回应对新疆人权的批评，中共特意安排一名维吾尔族运动员参与北京冬奥会开幕式火炬传递进行作秀。
+《华尔街日报》说，拜登政府将新的印太框架视为美国努力超越安全关系以对抗中共在亚洲日益增长的野心的重要一步。
 
-新疆是越野滑雪运动员20岁的迪尼热-依拉木江的出生地，她与中国另一位运动员赵嘉文是开幕式上最后一名火炬手。迪尼热-依拉木江来自新疆北部的阿勒泰，这个山区是中共声称发明滑雪运动的地方。
+信息来源：[https://gettr.com/post/psyhjhed64](https://gettr.com/post/psyhjhed64)
 
-据美国大使周日在美国有线电视新闻网(CNN)上说：“这是中国当局试图转移我们对真正问题的注意力，即维吾尔人正在遭受酷刑，维吾尔人正在遭受中国的虐待，我们需要把这个问题放在首要关注位置。”
-
-据美国驻联合国大使琳达.托马斯.格林菲尔德称，“我们知道那裡发生了种族灭绝，”琳达-托马斯-格林菲尔德批评说，”我们已经谴责了它，总统（乔-拜登）也做了谴责。” 据格林菲尔德说，”我们已经明确表示，中国正在明知故犯地实施这些反人类罪行。”当被问及将就人权问题发言的美国运动员在当地的安全问题时，她说她 “希望中国不会对他们採取任何行动”。”格林菲尔德补充说：“我们的目标是确保我们的运动员安全，我们正在尽一切努力来做到这一点。”
-
-信息来源：
-
-[美國批評中國讓新疆運動員最後一棒傳遞奧運聖火](https://www.rfi.fr/tw/%E4%B8%AD%E5%9C%8B/20220206-%E7%BE%8E%E5%9C%8B%E6%89%B9%E8%A9%95%E4%B8%AD%E5%9C%8B%E8%AE%93%E6%96%B0%E7%96%86%E9%81%8B%E5%8B%95%E5%93%A1%E6%9C%80%E5%BE%8C%E4%B8%80%E6%A3%92%E5%82%B3%E9%81%9E%E5%A5%A7%E9%81%8B%E8%81%96%E7%81%AB)
-
-*编辑：东京樱花团/喜马拉雅的微尘
+*编辑：东京樱花团/keyboard racing
 发布：东京樱花团/老黑*
+
 ![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
