--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,19 +1,46 @@
 ---
-title: 巴西新冠死亡人数创历史新高达1308人
+title: 没有新中国联邦就没有美国授权撤离驻中共使馆这一说
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968233/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1968281/)
 
-撰稿：东京樱花团/立正道
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-618.png)图片来源于本文链接
-路透社，圣保罗2月5日，巴西卫生部长宣布，过去24小时内确诊的中共病毒（新冠病毒Covid-19）死亡人数达到1308人，新增感染人数达到197442人。死亡人数是自去年7月29日以来的最高水平。
+G-TV视频链接：[https://gtv.org/video/id=62007a68585ecc15d73e5817](https://gtv.org/video/id=62007a68585ecc15d73e5817)
 
-此外，据圣保罗州官员称，上周在该州发现了两例 Omicron 菌株衍生物“BA.2”。
+**郭文贵先生：**你看一个授权撤离，这么多战友：哎呀，七哥，会不会美国玩咱呢？会不会是谁玩咱呢？会不会谁又玩？——哎呀我的妈呀，你头都大。你太拿你爆料革命当个事儿了吧？人家美国政府撤个骗局，玩你爆料革命去，你算老几？人家乌干达那个字上都不会玩你，人家啊没事撑得了？阴谋论、虚假论、造假，天下就中国人要想走向文明，我就今天在这五年了，我特别第一个想说：那不知道有多遥远！这么大的事儿来了，就没有几个人愉悦起来。
 
-信息来源：[ブラジルのコロナ死者が過去最多1308人、約6カ月ぶりに更新](https://jp.reuters.com/article/worldNews/idJPKBN2KC02W)
+一个国家的政府敢撒谎，是吧？就赶上外交部说：中国是最安全的地方，你走什么走？这话能让死人、能把人气死了，你知道吗？是吧？然后中国人也不相信这是好事儿，然后说美国政府说叫“授权彻离”，只是病毒。你看看连个辨别能力天下没有一个——十几亿中国人。
 
-*编辑：东京樱花团/知了知了
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
+你觉得人类上，看看历代，大清朝，战友们，大清朝就有美国驻中国大使馆。人家美国大使馆，一个200多年的国家看到了一个中国从大清朝的堕落，国民党、共产党到今天，没关过馆，连六四都没关过馆，啥叫授权撤离知道吗？理由是病毒。他可以说理由，他可以说理由是拜登长了个脚疮呢，他什么理由都可以说出来。但就没有人相信，有中国人和新中国联邦，我们做到了！
+
+没有我们，没有“授权撤离”这一说。但不是因为我们才授权撤离，我们是其中的重要一份子——就像做饭一样，没有盐，这饭没法吃。但是你不能说，因为我是吃了盐才吃上饭。就这么简单。
+
+字幕来源：[2022年1月27日 文贵大直播 全文字版](https://gnews.org/zh-hans/1924957/)
+
+编辑整理：Jacques；
+
+字幕文件制作：大好河山；
+
+视频制作及上传：Cindy；
+
+G-News发布：小满；
+
+**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；欢迎关注盖特独家文贵先生大直播精选发布账号：**[**@MilesGuolive1**](https://gettr.com/user/MilesGuolive1)
+
+声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
+
+欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
+
+Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
+
+YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
+
+G-News：[jgalaxy2021foreign laguages](https://gnews.org/author/jgalaxy2021/)、 [喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
+
+盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
+
+推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
+
+G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
