--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,50 +1,45 @@
 ---
-title: 爆料革命五年最大感受人心难改、怀疑否定一切真实美好
+title: 今天下午 5 点，所有自由车队卡车和平的撤离了魁北克市中心
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1968232/)
+`温哥华圆成农场🇨🇦` [轉載自GNews](https://gnews.org/zh-hans/1968252/)
 
-G-TV视频链接：[https://gtv.org/video/id=62007986585ecc15d73e57db](https://gtv.org/video/id=62007986585ecc15d73e57db)
+2022-02-06
 
-**郭文贵先生：**七哥一贯地爱说实话，有时候话真的说实话不好听。可能我们华人、包括我们，我觉得现在被一贯列为的亚洲人，我们有很多问题确实需要去面对、去思考。特别到今天1月27号在我们爆料革命到5年的时候，我特别要感谢我们所有和我们一起经历过的战友，和现在正在经历的战友，这个是我相信，即使中国人没有多少相信我们会走到今天，也不会有多少人相信能走到这个样子，这是为什么呢？我们在生活中总能看到，特别就现在、此时此刻，我们很多战友，包括从昨天到今天，前天我们直播完以后，美国授权撤离大使馆，不到俩小时，就是能看到那个兴奋、喝醉、哭的、感动铺天盖地。
+作者：16626
+![](https://assets.gnews.org/wp-content/uploads/2022/02/D2AEMGLRNIIJQ3NCNTG.png)图片来源：[Tous les camions ont quitté le centre-ville de Québec](https://www.tvanouvelles.ca/2022/02/06/tous-les-camions-ont-quitte-le-centre-ville-de-quebec)
+#### 下午 5 点，最后一批自由车队卡车和平地撤离了魁北克市中心
 
-但是随即我睡了一觉醒来，你会发现战友给我发的很多信息，除了感觉绝大多数都是怀疑，而且这个怀疑很多大家都看看到是捕风捉影。比如说有人说：哎呀，什么美国国务卿又玩儿这一招，副国务卿已经授权大使啦，然后中共已经出来说话啦，实际上是中共说把美国给撵出去的啦，哎呀是不是又玩儿一招呢。
+TVA Nouvelles（2022年2月6日，下午5点46分）发表一篇题为《所有卡车已经撤离了魁北克市中心》的文章报道，今天下午 5 点，在围观的示威者的掌声中，最后一批自由车队卡车和平地撤离了魁北克市中心，自由车队称计划在两周内返回魁北克市。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/@8I_LDVCD1C88G0SFQPC.png)图片来源：[Tous les camions ont quitté le centre-ville de Québec](https://www.tvanouvelles.ca/2022/02/06/tous-les-camions-ont-quitte-le-centre-ville-de-quebec)
+#### 最后一批停在勒内-莱维斯克大道（boulevard René-Lévesque）上的卡车在围观的示威者的欢呼声中离开了
 
-我这些年最大的感受就是，七哥是走遍了世界的人，就从来你不会看到像我们中国人一样，永远不相信幸福能到自己的头上，也不相信有什么真东西，就是真东西来了也要有一万个怀疑。我们这个华人圈里面到了这个程度，就是自己你根本不知道。这个世界上最可怕的事情就是你自己脑袋上顶了一个屎盆子，然后你一路晃荡晃荡走来，你还特别享受，到人家屋里面、餐厅哪儿都说：“你看我这头上的盆多漂亮啊。”人家说：“你这是屎。”“不，我这享受着呢。”这是很可怕的。
+魁北克市警察局警告卡车抗议者，下午 5 点（2022年2月6日）后将不再允许车辆通行，那些不离开的卡车将被罚款，甚至被拖走，“以避免（构成）继续违章犯罪”。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/O81SPCGAMHI@ROA@AGK.png)图片来源：[EN IMAGES | Convoi à Québec: la police ne tolère aucun écart](https://www.tvanouvelles.ca/2022/02/03/en-images--convoi-a-quebec-la-police-ne-tolere-aucun-ecart)
+在（2022年2月6日）下午 5 点后不久，在最后一批（围观的）示威者的掌声中，所有卡车都和平地离开了（示威）现场
+![](https://assets.gnews.org/wp-content/uploads/2022/02/WSHBDPZQ25IPKIB1XO.png)图片来源：[EN IMAGES | Convoi à Québec: la police ne tolère aucun écart](https://www.tvanouvelles.ca/2022/02/03/en-images--convoi-a-quebec-la-police-ne-tolere-aucun-ecart)
+#### “自由车队”在两周内重新返回
 
-我们中国人自己不知道，这就是中国人走到全世界让人家多不待见。就连到非洲去，我到坦桑尼亚，人都问：“你是台湾来的还是香港来的？”“大陆来的”，人家的眼神都不一样，我说：“台湾和香港和大陆有什么不一样？”他说：“香港是英国的地方，台湾是有民主的地方。我们在这儿非洲大草原接待，只要台湾、香港人来，我们不跟大陆人安排在一起的。”就是中国人你独不独立，就现在这小王子、佳佳、下面这MG，是吧，大牛、巴黎水多，人家摔跤的雅各，这等级已经给你分得很清楚了，不是你决定，是全世界人民给你决定的。
+然而，魁北克“自由车队”的组织者计划在两周内重新返回，以“给勒戈Legault（做出）让步的时间”，并制作一个以“自由”为主题的“伍德斯托克（伍德斯托克音乐艺术节）”。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/04M3JKIEGY8LFFVW.png)图片来源： 截屏于[Rendez-vous dans 2 semaines: quitter pour mieux revenir](https://www.tvanouvelles.ca/2022/02/06/rendez-vous-dans-2-semaines-bernard-rambo-gauthier-demande-aux-manifestants-de-quitter)图中显示伯纳德-“兰博”-高德（Bernard «Rambo» Gauthier，魁北克工会代表和魁北克“自由车队”的组织者）在演讲
+“我们今晚就走，但我们会在两星期后回来[…]。你有 15 天的时间来准备 […]，（回来时）我们会有更多的人”，伯纳德-“兰博”-高德（Bernard «Rambo» Gauthier，魁北克工会代表和魁北克“自由车队”的组织者）周五下午（2022年2月4日）这样说。
 
-那我们中国人，你看看我们在生活中我们发现最多的问题是什么？兄弟姐妹们看到了吗？我们战友当中还是生活当中，就是把一切好人、一切好事儿，猜测、怀疑全给它毁了。然后你就会看到我们身边无数个大头症，无数个大头症，猜测、预测、想象就把一切真理、真相全给你扭曲了。不但这个，大家更重要的我们看到了，我今天特想给大家说的，一说谁谁谁曾经，一说巴黎，“哎呀，巴黎曾经在夜总会唱过歌，坐过台”，大牛，“大牛夜总会里边做过鸭子”，是吧？这一说这俩人就不是好人了，是吧？然后说“哎哟，大牛他舅舅的舅舅是大陆的共产党，所以他不可能灭共”。就是你要这么一说这人类就没好人啦。
+另外，Gnews（2022 年 2 月 5 ）发表一篇题为《[自由车队：在新平台上筹集的资金已超过90万元](https://gnews.org/zh-hans/1963141/)》的文章报道，在 GoFundMe 拒绝向全国各地示威反对强制接种疫苗的卡车司机支付筹集的资金后，他们（卡车司机）转向另一个平台，而且已经筹集了近 100 万元。
 
-所以说我们在生活中这5年来感受最大的痛苦人心难改。很多人因为在共产党大陆这种惨烈的互相竞争的人吃人的文化中长大，不相信真的，不相信善的。更重要的用怀疑来否定一切真实存在和美好的。我们作为一个正常的人宁可相信他好也不愿意相信坏，咱们大陆的是宁可相信他坏坚决不相信他好。我们作为一个正常的人应该帮助和喜欢同类，我们是恨所有的一切，连狗都给它吃了，连狗皮都给它吃了。
+## 请读者学习2月6号郭先生Gettre视频
 
-字幕来源：[2022年1月27日 文贵大直播 全文字版](https://gnews.org/zh-hans/1924957/)
+2月6号郭先生发表了题为《[尊敬的战友们好！关于如何使用GTV帮助加拿大卡车反疫苗运动的几点声明！](https://gettr.com/post/pswoyr9fbf)》的Gettre视频。
 
-编辑整理：Jacques；
+这次卡车司机的行动背后的政治博弈非常激烈。请读者，特别是身处北美的战友，记住，新中国联邦人是有信仰，有底线的，一定要坚持，为真不破，报道真相，不煽动或鼓励暴力。相信郭先生完全有能力和智慧以和平方式消灭世界的一切不公平。欢迎读者访问并在“[加拿大温哥华圆成农场](https://gettr.com/user/himalayavang)”上留言。
 
-字幕文件制作：大好河山；
+参考链接：
+[Tous les camions ont quitté le centre-ville de Québec](https://www.tvanouvelles.ca/2022/02/06/tous-les-camions-ont-quitte-le-centre-ville-de-quebec)
 
-视频制作及上传：Cindy；
+编辑：LILY
+发布：肥鯮
 
-G-News发布：小满；
-
-**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；欢迎关注盖特独家文贵先生大直播精选发布账号：**[**@MilesGuolive1**](https://gettr.com/user/MilesGuolive1)
-
-声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
-
-欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
-
-Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
-
-YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
-
-G-News：[jgalaxy2021foreign laguages](https://gnews.org/author/jgalaxy2021/)、 [喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
-
-盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
-
-推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
-
-G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
-
+更多资讯请关注：
+[温哥华圆成农场GTV频道](https://gtv.org/user/5f30d3ff91d4727c6a88395d)｜[温哥华圆成农场官方盖特](https://www.gettr.com/user/himalayavang)｜[温哥华圆成农场Discord服务器](https://discord.gg/8RMGcwT8)
+![](https://assets.gnews.org/wp-content/uploads/2021/11/%E8%BE%B2%E5%A0%B4%E6%96%87%E5%AE%A3-3.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
