--- a/gnews/18.md
+++ b/gnews/18.md
@@ -1,28 +1,58 @@
 ---
-title: 中共和俄罗斯的高超音速武器威胁美国的预警系统
+title: 普京为与中共国达成的价值千亿美元的协议而“欢呼”
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1968189/)
+`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/1968230/)
 
-#### 撰稿：彩虹       
+翻译&评论：金生水
+![](https://assets.gnews.org/wp-content/uploads/2022/02/3-22.png)图片来自网络
+《路透社》近日报道，俄罗斯总统弗拉基米尔·普京周五公布了价值约 1175 亿美元的俄罗斯与中共国的新石油和天然气交易，承诺在与欧洲客户在乌克兰问题上的紧张局势加剧之际，将增加俄罗斯在远东的出口。
 
-#### 责编：白夜
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-616.png)图片来源：军事
-2月6号，《新闻极限》报道，五角大楼的一位前工作人员在《金融时报》（Financial Times）发表社论说，美国必须赶上中共国和俄罗斯在高超音速武器方面的进展，否则会被这两个超级大国超越。
+已经是北京第三大天然气供应国的俄罗斯一直在加强与世界最大能源消费国中国的联系，以减少对传统欧洲能源客户的依赖。
 
-威廉·施耐德（William Schneider）是哈德逊研究所（Hudson Institute）的高级研究员，曾担任过副国务卿和五角大楼的国防科学委员会主席。他认为，那些对中共国和俄罗斯的（高超音速导弹）测试不屑一顾的人是“忽略了其重要性”。
+普京在与中共国国家主席习近平讨论更密切合作的会议上说：“我们的石油商已经为中华人民共和国的油气供应准备了非常好的新解决方案。”
 
-他说：“机动高超音速飞行器不仅仅是将核弹头运送到目标的另一种手段，相反，它们是旨在击败美国预警能力的‘系统体系’的一个重要组成部分。”
+他补充说：“天然气行业向前迈进了一步，”他指的是一份每年从俄罗斯远东向中国供应 100 亿立方米的新合同。普京日前在北京参加冬奥会。
 
-施耐德警告：“中共和俄罗斯的机动高超音速导弹能力，使得这些敌对大国能够拥有击败美国预警系统的综合能力。在这种情况下，美国将对来袭的外国导弹攻击无法预警，应对能力受到极大限制。”
+根据路透社的计算，光是天然气的销售就可在25年里带来375亿美元的收入，假设每1000立方米平均价格150美元，这也是俄国天然气巨头俄罗斯天然气工业股份公司目前和中国的协议的价格。
 
-据CNN报道，周四，在一次来自二十多家美国最大的国防公司首席执行官们的高级别会议上，国防部长劳埃德·奥斯汀（Lloyd Austin）鼓励他们加速高超音速武器的开发。
+克里姆林宫发言人德米特里佩斯科夫表示，该协议为期 25 年，而一位中国行业消息人士称，该协议为期 30 年。
 
-根据报道，去年夏天，俄罗斯进行了试验高超音速的“海燕”核动力和核武装巡航导弹，该导弹具有无限的射程。而中国则测试了两枚高超音速弹道导弹，其中一枚在机动轨道飞行时释放了第二个高超音速物体。
+另外，以普京的长期盟友伊戈尔谢钦为首的俄罗斯石油巨头俄罗斯石油公司与中国中石油签署了一项为期 10 年通过哈萨克斯坦供应 1 亿吨石油的协议，有效延长了现有的协议。
 
-**新闻来源**
+俄罗斯石油公司表示，新协议价值 800 亿美元。
 
-[Former Pentagon Official: Chinese, Russian Hypersonic Weapons Threaten US Early Warning System](https://www.newsmax.com/politics/china-russia-u-s-hypersonic-weapons/2022/02/06/id/1055724/)
+这些协议提振了卢布和俄罗斯股市，包括俄罗斯石油公司和俄罗斯天然气工业股份公司的股票。
 
+普京指责美国加剧了俄罗斯邻国乌克兰的紧张局势，乌克兰因想要加入北约而激怒了莫斯科。超过十万名俄罗斯军队已在乌克兰边境附近集结。西方国家指责莫斯科策划入侵，但遭到否认。
+
+俄罗斯是欧洲最大的天然气供应国，西方国家担心一旦发生冲突，已经紧张的供应可能会中断。然而，与北京的新协议不会让莫斯科将原本运往欧洲的天然气分流，因为它涉及来自太平洋萨哈林岛的天然气，没有连接到俄罗斯的欧洲管道网络。
+
+俄罗斯天然气工业股份公司在一份声明中表示，它计划将向中国的天然气出口量增加到每年 48亿立方米，包括通过新同意的管道，该管道每年从俄罗斯远东地区输送 10亿立方米。
+
+根据之前的计划，俄罗斯的目标是到 2025 年向中国供应 38亿立方米。该公告没有具体说明何时达到新的 48亿立方米目标。
+
+俄罗斯天然气工业股份公司与壳牌等外国合作伙伴已经在萨哈林岛每年生产超过 1000 万吨液化天然气。
+
+“向中共国东北端输送天然气使该项目对中国具有战略吸引力，因为唯一真正的替代供应将是更昂贵的液化天然气，”总部位于莫斯科的 BCS 经纪公司在一份关于 10 亿立方米交易的报告中表示。
+
+一位业内消息人士周五早些时候告诉路透社，俄罗斯天然气工业股份公司垄断了俄罗斯的管道天然气出口，该公司已与中国石油天然气集团公司达成了一份为期 30 年的合同，第一条天然气将在两三年内流经新管道。
+
+消息人士称，天然气交易将以欧元结算，因为莫斯科试图从美元实现多元化，并对来自华盛顿的任何潜在制裁进行对冲。
+
+**西伯利亚的力量**
+
+俄罗斯现在通过其西伯利亚电力管道向中国输送天然气，该管道于 2019 年开始输送供应，并通过运输液化天然气。 它在 2021 年向中国出口了 16.5 亿立方米的天然气，其中通过西伯利亚电力出口了 10.5 亿立方米，这也与向欧洲输送天然气的管道分开。
+
+普京由包括谢钦在内的几名俄罗斯官员和企业高管陪同。 俄罗斯天然气工业股份公司负责人阿列克谢米勒不在代表团中。
+
+中共国还取消了对俄罗斯小麦和大麦进口的限制。
+
+就看了个冬奥开幕式，在北京只待了九个小时，就带着1175亿的合同让习近平签，反而中共官媒还在大肆赞扬俄罗斯“普京真给面子，就他一个大国领导参加开幕式！”。中国老百姓数年来为中共签订的这些不平等条约付出了沉重的代价，灭共以后一定要废除中共签订的一切不平等条约，中国人才能放下负担的走向未来。
+
+参考链接：
+
+[https://www.reuters.com/world/putin-tells-xi-new-deal-that-could-sell-more-russian-gas-china-2022-02-04/](https://www.reuters.com/world/putin-tells-xi-new-deal-that-could-sell-more-russian-gas-china-2022-02-04/)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/澳喜图标2-1.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
