--- a/gnews/19.md
+++ b/gnews/19.md
@@ -1,90 +1,24 @@
 ---
-title: 为什么要抵制北京冬奥会？
+title: 秘翻在线：什么样的诱惑，能使她的父母做出了如此愚蠢的选择？
 ---
-`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/1968185/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1968229/)
 
-翻译&评论：金生水
-![](https://assets.gnews.org/wp-content/uploads/2022/02/1-60.png)图片来自网络
-《BBC News》近日发表了一篇文章，汇总了关于本届冬奥会的一些争议以及为什么要抵制北京冬奥会。
+撰稿：待命（文暁）
+![](https://assets.gnews.org/wp-content/uploads/2022/02/画像1-11.png)（图片源自本文链接）
+2月7日时事通信社消息：据法新社报道，一名参加北京冬奥会花样滑冰团体赛的中国籍选手在表演中摔倒后在社交媒体上受到严厉批评。据信中共国正在审查有关该运动员的帖子。
 
-**北京冬奥会和残奥会将在未来几周举行**
+在美国出生和长大的Beverly Zhu，现中共国公民朱易，看似很紧张的出现在团体赛的女子单人滑赛场，没有发挥出预想的水平。等待发表分数时的她似乎在强忍泪水。
 
-中共国的人权记录导致一些国家宣布外交抵制奥运会，这意味着他们的高级官员不会参加。
+在中共国版推特之微博上，一篇带有 “朱易摔倒 “标签的帖子被浏览了2.3亿次，但该标签后来被封，6日下午，这个帖子不再出现在搜索结果中。而另一个带有 “朱易失败 “标签的帖子仍然有效，浏览量超过8000万次。
 
-**奥运会什么时候举行，规模有多大？**
+于2018年更改了国籍的朱易说：因为第一跳没成功而心力交瘁，在最后一跳的落地时感到压力很大，不幸的是我失败了。
 
-冬季奥运会于 2 月 4 日至 2 月 20 日举行，约有 3,000 名运动员参加 109 个不同的项目。
+然而，互联网上少见对朱易的同情，有些人还对队员的选拔提出了质疑。有个人说：“陈虹伊要好得多，我不明白为什么像她这样的人会被选入中国队”。 “另一个人补充说：”压力太大。想知道，有没有一个球员可以在不感受到国家和人民的压力的情况下参加奥运会？”。
 
-冬季残奥会于 3 月 4 日至 3 月 13 日举行，约有 750 名参赛者参加 78 项赛事。
+翻译这篇报道，使我想起了郭先生的话：跟着共产党，走进火葬场。出生于２００２年的朱易，２０１８年的时候１６岁，还不是个成年人。她的父母把她生在了自由国家，又亲手把她送回了反人类国家。是什么样的诱惑，能使她的父母做出了如此愚蠢的选择？所以，朱易的压力，既可怜又可恨！
 
-冬奥会将在北京及其周边举行。中国政府将为此会费39亿美元。室内冰上项目将在北京的体育馆举行；相距北京75公里的延庆将举办高山滑雪、雪橇以及无舵雪橇的比赛；
+信息源：[フィギュア団体で転倒、中国籍取得の選手にSNSで批判殺到（ＡＦＰ＝時事） – Yahoo!ニュース](https://news.yahoo.co.jp/articles/b3efbbd26e9d5bc42d8f3f70a6e98eab57df8662)
 
-相距北京180公里的张家口将进行大部分的滑雪和滑板滑雪比赛。
-
-比赛将使用大约一百二十万立方米的人造雪，来弥补比赛地区降雪的不足。中共国也因此产生的环境影响而受到了批评。
-
-由于中共病毒的影响，冬奥会的运动员和官员将会在一个安全的闭环内（活动）。现场比赛并不会对公众开放。
-
-**哪些国家抵制奥运会？**
-
-美国、英国和加拿大以及印度、澳大利亚、立陶宛、科索沃、比利时、丹麦和爱沙尼亚都宣布了外交抵制。
-
-他们都派出了运动员，但没有部长或官员参加。
-
-美国称这是因为中共国“在新疆侵犯人权和暴行”—针对新疆穆斯林人口。
-
-英国国会议员伊恩·邓肯·史密斯代表议会对华联盟表示：“中国政府在西藏维吾尔地区实施工业规模的侵犯人权行为，并几乎每天都对台湾领空进行军事入侵。
-
-“我们不能为中共国的专制政权提供任何合法性。”
-
-印度宣布进行外交抵制，因为其中一名火炬手是一名中共国军官，他在两国边境与印度军队发生了一场致命的小规模冲突。
-
-日本也表示不会派部长参加奥运会，但会派出奥运官员。
-
-新西兰、奥地利、斯洛文尼亚、瑞典和荷兰没有派出政府代表，但表示他们的理由是中共病毒。
-
-法国一直反对抵制。 马克龙总统曾表示：“我认为我们不应该将这些话题政治化，特别是如果要采取微不足道和象征性的步骤的话。”
-
-世界各地也出现了人权活动人士反对北京奥运会的抗议活动。
-
-**对中共国的指控是什么？**
-
-北京政府被指控对西北省份新疆的维吾尔穆斯林人口实施暴行。
-
-人权组织认为，过去几年有超过一百万维吾尔人被关押在中共国所谓的“再教育营”的大型网络中，数十万人被判入狱。
-
-他们说，有证据表明维吾尔人被用作强迫劳动，妇女被强制绝育。 一些前集中营被拘留者声称他们受到了酷刑和性虐待。
-
-北京还被指控通过包括香港国安法在内的新立法限制香港人民的自由。
-
-人权观察在其 2021 年年度报告中表示，“北京的镇压，坚持对中国共产党的政治忠诚，在全国范围内加深”。
-
-**中共国是如何应对的？**
-
-中共国一直否认在新疆侵犯人权，并警告其最直言不讳的指责者，如美国和德国，不要干涉其在香港的“内政”。
-
-反对美国外交抵制的声音最为响亮。
-
-中共国外交部表示，美方“明显违背奥林匹克精神”，“将为自己的错误行为付出代价”。 但是，他们从未说明美国会付出什么样的代价。
-
-**关于手机的警告有哪些？**
-
-运动员和其他冬奥会的参与者被警告说，他们每天不得不使用的新冠监控手机程序存在安全风险。
-
-网络安全组织公民实验室表示，该应用程序的加密系统较弱，其上加载的数据（例如医疗和旅行历史）可能会被黑客利用。
-
-据报道，一些国家告诉运动员将主要设备留在家中，并在奥运会上使用预付费电话。
-
-中共官媒否认了这些担忧。
-
-中共投资北京冬奥上的这些钱，都是中国人民的血汗钱，都是搜刮的民脂民膏，并不是中共理所应当可以随便用的钱。这样的面子工程重要，还是用这些钱改善中国人的实际民生更重要？如果用这些钱去救济那些吃不上饭的老人，或者救济一下那些没人管的孩子，是不是会把这三十几亿用的更有价值？
-
-除此以外中共还在新疆集中营、香港运动等人权问题上犯下滔天大罪，海内外任何有良知的人都应该抵制北京冬奥！为什么要为魔鬼政权买单呢？
-
-参考链接：
-
-[https://www.bbc.com/news/explainers-59644043](https://www.bbc.com/news/explainers-59644043)
-![](https://assets.gnews.org/wp-content/uploads/2022/02/澳喜图标2-1.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
