--- a/gnews/20.md
+++ b/gnews/20.md
@@ -1,17 +1,21 @@
 ---
-title: 七哥谈中共和哈萨克斯坦（二）
+title: 七哥谈中共和哈萨克斯坦（三）
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1968166/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1968216/)
 
 整理：雅典娜速记组
 编辑：tianzhihuan
 
-哈萨克斯坦，这个整个纳扎尔巴耶夫你看看他全家几乎都是什么油、气、通信，你但凡去过那个国家，你感觉这个国家就是他一家人的，不但是石油。能源、矿业，他都弄着啊，就连那个首都的夜总会，你一查都是女婿的，什么侄子的全都是。
+在他们心里边儿，夏威夷就是海南，而且在北京有房子，上海有房子。这个国家完全腐败，共产党利用这种蓝金黄，把整个的东欧这几个国家全部给控制了。
 
-我喝完酒以后，晚上到他们夜总会去，他们的夜总会是在楼上，不像中国人夜总会在楼下。中国人有个习惯思维，所以就在地下。移到地上，就是很高级了，警察保护了他们，说在最顶楼，中间这转盘，那个真的是就像青青草原的脸，那个美女漂亮啊，咔咔跳，舞花一进去以后，他们在一个转的台子上跳啊，各种舞蹈，那个音乐，进去以后你情不自禁的就开始跟着晃起来了，然后这边就人家就端着来了，他们好厉害呢夜总会啊，比七哥那个裕达俱乐部厉害，比盘古还厉害，人家那跨过来又端着盘子，你都不知道，就一个盘子上就放了10个杯子或者7个杯子，但你拿那个杯子的旧跟别人的杯子绝对不一样，它就会那么巧妙，都是那种黑珍珠，300年的黑珍珠。我在喝的香槟，都是超级酒就给你上来了。你说他有多腐败这个国家啊，那一顿晚饭下去啊，都是上百万美元。
+所以当你江家王岐山，你都要陈锋有多牛，我在那儿，他们竟然问我，哎，你认识陈锋吗？陈老板吗？我，我很惊讶。他说，我们这块儿的大人物啊当时是谁呀？陈锋、王健，人才不，他们不但要马云的啊，都是江家王岐山派康典、田国立、田惠宇，又我一说，这都是岐山派啊。
 
-然后，这总统的家人，就是在场的时候，都是警察，他们叫做桂军，就是特种秘密部队的人，就在旁边护着我们，而且好多也是女的。而且给我讲海南话，讲郭先生您好，然后讲呀我们每年都到海南去度假啊。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/七哥谈中共和哈萨克斯坦（二）-.jpg)
+那个房间之大，大概700-800平方米。上面的大灯，那种夸张的风格，那种翡翠绿啊，那个屋顶啊，灯花又闪，旁边人跳着舞，这个吃的一大长桌五六米，桌子上摆着各种肉，各种酒。他说，这都是中国的朋友来独享的。我说完了，这个国家彻底完了。
+
+所以说兄弟姐妹，今天你看到哈萨克啊，他不是今天，他是一个中俄之间共产主义蔓延，共产主义统治全世界必然发生的结果。
+
+这个哈萨克的纳扎尔巴耶夫和他女儿阿莉婭呢，一定最后和罗马尼亚齐奥塞斯库一样的结果。我今天可以在这儿说个没有任何人知道咱们我说的这个东西，没有人知道就是王毅去了，最后给了美帝国主义了，发现了嘛，俄罗斯成功推给美帝国主义了吧，黄金的事情就更没人知道了。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/七哥谈中共和哈萨克斯坦（三）-.jpg)
 2022年1月7日文贵大直播
 
 *发布：tianzhihuan*
