--- a/gnews/23.md
+++ b/gnews/23.md
@@ -1,33 +1,23 @@
 ---
-title: 北京冬奥奥运团队开始对隔离酒店条件吐槽
+title: 俄罗斯感染中共病毒的记录创历史新高
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1968080/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1968152/)
 
-编译：花岗岩
-![](https://assets.gnews.org/wp-content/uploads/2022/02/1-95.jpg)
-图片来源：网路图片
+#### 撰稿：彩虹       
 
-据美联社北京2月6日报道，一些不幸在北京奥运会上被检测出中共病毒（冠状病毒）阳性的奥运运动员认为他们的隔离条件使糟糕的情况变得更糟，食物不足，无法食用的饭菜，没有训练设备。
+#### 责编：白夜
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-615.png)图片来源：ABC News
+2月6日，《国会山报》引述《美联社》报道，周日，俄罗斯新增中共病毒（COVID-19）病例创下历史纪录，达到189,071个，比周六的感染病例增加了2800例，比一个月前报告的感染数量增加了10倍。
 
-俄罗斯冬季两项运动员瓦莱里娅·瓦斯涅佐娃（Valeria Vasnetsova）在Instagram上从北京的一个所谓的隔离酒店发帖说，“我的胃很痛，脸色很苍白，眼睛周围有巨大的黑眼圈，我希望这一切都能结束。我每天都在哭，实在太累了”。
+然而，尽管病例数上升，俄罗斯因感染中共病毒的死亡人数略有下降。周日有661人死亡，而1月初报告的死亡人数为796人。然而，俄罗斯确实是欧洲因感染中共病毒死亡人数最多的国家，整个中共病毒疫情期间报告的死亡人数超过335,400人，其COVID-19（中共病毒）工作组还报告了1,280万例病毒感染者。
 
-她的问题不是病毒的任何症状，而是食物。瓦斯涅佐娃周四发布了一张她所说的 “已经吃了五天的早餐、午餐和晚餐 ”的照片，托盘上的食物包括普通意大利面、橙汁、骨头上的焦肉、一些土豆，没有蔬菜。
+随着病例的激增，俄罗斯总统弗拉基米尔·普京（Vladimir Putin）上周表示，当局不打算实行任何封锁或其他COVID-19限制措施。
 
-她说，她主要靠几块意大利面生存，因为“不可能 ”吃其他东西，“但今天我吃了他们提供的所有脂肪，而不是肉，因为我非常饿。”她补充说，她的体重下降了很多并且骨头已经显现出来了。
+根据报道，尽管俄罗斯是世界上最早提供中共病毒（COVID-19）疫苗的国家之一，但只有约一半的人口接种了中共病毒疫苗。
 
-隔离酒店越来越成为此次奥运运动员及其团队的批评对象，他们正在游说组织者进行改进。隔离缺乏透明度，只有一些病毒呈阳性的运动员被迫进入其团队无法进入的隔离酒店，而处于类似情况的队友则被允许在奥运村内进行隔离。
+**新闻报道**
 
-对检测出阳性的运动员的规定是，没有症状的人要到专门的酒店进行隔离。任何有症状的中共病毒患者将被送往医院。在这两种情况下，他们将不能参加比赛，直到被允许出院。
-
-各国代表队已经开始公开批评。
-
-在三届北欧综合运动会金牌得主埃里克·弗伦泽尔检测出阳性后，德国代表团团长德克·希梅尔普芬尼格（Dirk Schimmelpfennig）对 “不合理 ”的生活条件进行了抨击。他在FAZ报纸报道的评论中说，德国希望有更大、更卫生的房间，以及更正规的食物供应，以便最终被释放的运动员仍然适合参加比赛。
-
-比利时俯式雪橇运动员金·梅勒曼斯被从隔离酒店带回了运动员村的隔离区，她的主要怨言是缺乏信息。她被装进一辆救护车，在她以为自己会被释放的那一天从一个隔离设施运到另一个隔离设施。
-
-瓦斯涅佐娃在隔离区的时间发现运动员们得到的食物更差，并用一张为她同样隔离的队医提供的食物图片强调了这一点。她不明白，为什么对运动员有这种态度？
-
-新闻来源：[Olympic teams raise concerns over quarantine hotels](https://apnews.com/article/winter-olympics-quarantine-hotels-e2d2ffc60d9800cf1951cc3eaed323cb)
+[Russia COVID-19 infections 10 times higher than one month ago](https://thehill.com/policy/international/593037-russia-covid-19-infections-ten-times-higher-than-one-month-ago)
 
  
 
