--- a/gnews/26.md
+++ b/gnews/26.md
@@ -1,25 +1,27 @@
 ---
-title: 俄罗斯入侵将在几天内造成5万名乌克兰人伤亡
+title: 拜登放弃对伊朗制裁
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1968048/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1968062/)
 
-#### 撰稿：彩虹       
+翻译：  Evalu
+![](https://assets.gnews.org/wp-content/uploads/2022/02/2-19.jpg)
+图片来源：posts.careerengine.us
 
-#### 责编：白夜
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-613.png)图片来源：波士顿先驱报
-2月6日，《新闻极限》报道，虽然拜登政府在其关于俄罗斯可能入侵乌克兰的信息传递中放弃了“迫在眉睫”一词，但国会国防部的一份简报告诉国会议员们，俄罗斯可以在72小时内拿下基辅（Kyiv），全面入侵将造成多达5万名乌克兰人伤亡。
+美国合众社2月5日报道，拜登政府重新恢复2015年谈判期间的放弃对伊朗的制裁。美国全国广播公司和CNN新闻均报道了国务院周五通知国会立法者对伊朗的民用核项目放弃制裁。
 
-消息人士告诉《福克斯新闻》记者雅克·海因里希（Jacqui Heinrich），参谋长联席会议主席马克·米利（Mark Milley）将军上周告诉众议院和参议院的简报会，乌克兰首都基辅可能在72小时内被（俄军）攻下，代价是4000名俄罗斯军人和15000名乌克兰军人付出生命。
+该放弃制裁决定将允许国家间在某些不扩散的情况下可以进行合作。这种不扩散活动将回到当时的国际核协议上，当时伊朗只需要几个星期就可以生产武器级别的核弹材料。
 
-在另一份预测（俄军）大规模入侵和5万人伤亡的报告中，一位欧洲官员告诉《华盛顿邮报》（The Washington Post）说：“我们担心的是，你不会把战斗群在另一个国家的边境上两次（集结）却啥也不做。我认为这正是我真正担心的，（普京）现在把兵力集中在那里，即使他还是什么也不做……广大国际社会会作何感想？”
+而伊朗否认其有生产核武器的计划。川普政府于2018年再认证到期前收回了奥巴马时代的联合全面行动计划，称这是一个核心部分缺陷的东西，重新实施制裁。
 
-一位消息人士告诉海因里希，预期乌克兰人将会逃离，美国和欧洲盟友正在为难民和移民危机整合资源。
+由于撤除了该计划，伊朗已经添加了铀浓缩供应井，违背了原来的承诺并拒绝了国际原子能机构人员进入核心区域。
 
-文章说，目前，有10万到13万名俄罗斯军人在乌克兰边境集结，目前已经达到了全面入侵乌克兰所需（兵力）的70%。
+有官员说：” 如果不放弃制裁，有关与第三方针对堆积物的处理方面的详细技术讨论和其他不扩散价值的活动就无法开展。
 
-**新闻来源**
+本周早些时候，欧洲的合作者们在促进使美伊双方回到谈判桌上起了重要作用，国务院高级官员说根据目前伊朗的核项目，要回到2015年最初的协议将不太可能。
 
-[Russia Invasion Would Cost 50,000 Ukrainian Casualties Within Days](https://www.newsmax.com/newsfront/invasion-casualties-markmilley-war/2022/02/06/id/1055680/)
+##### 新闻来源： [Biden administration restores Iran sanctions waiver](https://www.upi.com/Top_News/US/2022/02/05/biden-restores-iran-sanctions-waiver-deadline-nuclear-deal-nears/6631644075537/)
+
+#  
 
  
 
