--- a/gnews/29.md
+++ b/gnews/29.md
@@ -1,35 +1,27 @@
 ---
-title: 澳洲政府明确指示大学：远离中共并与英美加强合作
+title: 部分感染中共病毒的韩国人将可能无法参与总统选举投票
 ---
-`走进澳洲` [轉載自GNews](https://gnews.org/zh-hans/1967949/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1968026/)
 
-整理/编辑：小红帽
+#### 撰稿：彩虹 
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/dfef.png)图片来源：雅典娜设计组(614)
+#### 责编：白夜
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-612.png)图片来源：Time
+2月6日，《国家脉动》记者娜塔莉·温特斯（Natalie Winters）发文，报道韩国感染中共病毒（COVID-19）的选民将可能无法在韩国即将举行的总统选举中投票。
 
+文章引述《韩国先驱报》（The Korea Herald）的内容说：“人们对COVID-19（中共病毒）患者是否无法在第20届总统选举中投票的问题越来越关注，因为那些在邮寄选票登记期之后被确认感染病毒的人可能无法在3月9日到投票站报到。”
 
-根据《澳大利亚人报》2月7日报道，澳洲政府发出“明确信号”，要求澳大利亚大学与英国和美国大学进行更紧密的合作，以实现市场多样化，并脱离与中共国的研究合作。
+报道说，韩国的国家选举委员会（National Election Commission）有一个为期五天的窗口，接受邮寄选票的申请，在治疗中心居住的中共病毒患者和那些被隔离或自我隔离的人均可以使用。
 
-澳大利亚八所研究最密集的大学的八校联盟（Group of Eight）本周与英国的罗素集团（The Russell Group）举行了一次圆桌会议，讨论深化双方的关系。
+《韩国先驱报》解释说：“在这段时间内登记的人将能够收到邮寄的选票，并通过向选举当局寄回选票来投票。”
 
-这次圆桌会议是在AUKUS澳英美协议和与英国的自由贸易协定之后发起的。该协议促进了英国和澳大利亚在新技术和国防相关科学商业化方面的合作。
+但是，对于那些在国家选举委员会接受邮寄选票申请的窗口期之外感染了中共病毒的个人，就没有任何保障其投票选举的措施。
 
-八校联盟首席执行官维姬·汤普森（Vicki Thompson）表示，虽然大学不一定想脱离（与中共）现有的伙伴关系，但大学已经在与中共合作方面收到了明确信息。
+但是，“有人警告说，到选举时，下个月每天新增的（中共病毒）病例可能超过十万例，这引起了人们的担忧，（这会导致）几十万选民无法在总统选举中投票。”对此，报道说，国家选举委员会正在讨论应对这一潜在危机的措施。
 
-澳大利亚国立大学（ANU）安全学院院长罗里·梅德卡夫（Rory Medcalf） 表示，深化澳英研究合作是“对新地缘政治现实的合理回应”。
+**新闻来源**
 
-当被问及政府是否已经向大学发出远离中共国研究合作的信号时，代理教育部长斯图尔特·罗伯特（Stuart Robert）说，他 “欢迎 “这次圆桌会议的举行。
-
-新闻链接：[澳大学收到“明确信号”：与英美加强研究合作 远离中国](https://cn.theaustralian.com.au/2022/02/07/63268/)
-
-*发布： tianzhihuan*
-
-更多资讯，请关注：
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+[COVID Positive? In South Korea, You Might Be Barred From Voting](https://thenationalpulse.com/2022/02/06/covid-positive-people-may-be-barred-from-voting/)
 
  
 
