--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,49 +1,40 @@
 ---
-title: 爆料革命五年最大感受灭共容易让中国人心变好难于登天
+title: 2.06大直播后记：历经中共缠诉，成就七哥法治基金
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1968295/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1968363/)
 
-G-TV视频链接：[https://gtv.org/video/id=62007b1d585ecc15d73e584f](https://gtv.org/video/id=62007b1d585ecc15d73e584f)
+**整理编辑：文泓**
 
-**郭文贵先生：**你说这五年，你往回看这感受，你见过咱爆料革命从第一天到今天除了咱们这些战友之外，有几个中国人认为海航是邪恶的？王岐山是邪恶的？孟建柱邪恶？孙力军邪恶？没有人！除了被害者之外！
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/image-621.png)
 
-雅各他家被欺负，他是仇恨当头。如果不是，他不认识这人是邪恶的，在中国，因为他没动我，海航也没海航我，王岐山也没“王”我，孟建柱也没“孟”我，我干嘛恨他？就咱中国人那邻居家能死人、被强奸、被轮奸，绝对视若无物。没有比中国人这心再冷的了。没有比中国人这心再冷的了。
+图片来源：墨尔本雅典娜农场设计组
 
-这为啥我们说台湾好？为啥我们说香港好？你到香港去，同类，你就能看到香港人，过去罗湖关，我听到最多的，过去这几十年，每个人都说：哎呀文贵呀，过了这个河，咋就天地不同呢？当年去台湾，一飞几个小时到那转悠回来，后来直通以后到台湾，为啥人家台湾的男的女的都看上去那么顺眼呢？不是别的，是人心！中国人的脑子坏了，中国人的人心坏了。
 
-所以咱五年的爆料革命，不是共产党最难，真的是中国的人心！就这个授权撤离，都让七哥都不知道咋好了我都。刚才那个罗西讲了他师父的事情，让人感动。他有师父，中国人哪有求师父的？爹妈都不要了，还要什么师父？中国你见什么师父？师父是利用的，学生也是利用的，谁管你什么师父？没大没小、没老没少、没内没外，一切就是利益，就一切！宗教也是这样，一切都是利益！
+当时，最大的老板海航王健都死个球的了，你说这5年发生了多少事情？然后，现在共产党你再说那3号、5号文件，我告诉你，亨利小哥，我这些事情美国政府分之百清楚，那个司法部（官员）黑根巴森已被黑掉了，吴征化了8000万现金，埃利博迪、斯蒂芬·温，所有华尔街大佬们给中共游说（遣返）七哥。哪一个放你们身上，那怕1.001，我保证，亨利小哥，（就像）你跳到夏威夷海里面去，别看你强壮，你是活不了了。
 
-你今天你把我问在这，问到今天五周年，七哥最感慨的事：灭共容易，想让中国人心变好难上加难！比登天、比登太阳系都难！所以说这是灭了共产党，灭一万回共产党，我也不会回中国活着去。我宁可在，真的在美国当狗，美国人明天就是我在大街上当狗去，我吃着狗粮，最起码我知道它没有化学的。
+我118次做证（deposition），每次都在14至15个小时。或者你可以试试，如果你想跟小新一起扛过（新冠）病毒，小新绝对2天就把你“撂倒”，你绝对有想自杀的心。（因为）你不到现场你不知道。
 
-我觉得除了中南坑，中国人没有一个粮食没有化学的。我在这块儿当狗，我也不会回中国去。还搞什么政治，新中国联邦接管，去吧，你爱谁接管谁接管，剩下内战。你八次内战，跟我都没有关系，我只负责把共产党——我肯定把它灭了。这是发自内心的，我就这么直接。
+当初，就是我第一次告那个大卫律师的时候，我根本不懂美国法律啊，咱还以为在中国呢？上去人家对方一问，反正法官没在现场，咱就是敞开了嘴，随便说是吧？人家问一，我就来因为、但是，所以（一番解释）啊，而且还经过翻译，律师提前还告诉我说，你要让法官喜欢你，叫仲裁的那个（法官）喜欢你，（你）还要装作很弱势，就差咬舌头了啊。然后，身体出汗、说话很小声，最后的结果是（在法庭上）完全丢人现眼。
 
-字幕来源：[2022年1月27日 文贵大直播 全文字版](https://gnews.org/zh-hans/1924957/)
+在法庭上最怕说，因为、所以、但是，**你的答案就是，是、不是、不记得**，就这3句话。人家说1，你最好说0.1。咱们中国人，因为、所以、但是（语境），（在法庭上）把自己给毁了。
 
-编辑整理：Jacques；
+但是，七哥牛就牛在，明知山有虎，偏向虎山行，是吧？郭宝胜、夏业良案我坚持要都上庭。咱律师说，你没有任何可能赢，（因为）陪审团一看，一个百万富翁（与普通人打官司），一个有钱人来了，看你长这样，肯定判你输。最后我赢了！我说，我就算输，我也一定要学习。
 
-字幕文件制作：大好河山；
+**我要知道美国的法律，我们要搞法治基金，我们要以法灭共后成立一个法治的中国。**没想到，**我得感谢郭宝胜、夏业良，经历所有这一系列的案子，也成就了我。**现在我不敢说，律师牌照是考不了，但我当半个律师绝对没问题。就好几个国际官司上，律师说，Miles，你给我们讲讲你这个上庭，还有被作证的事情，我们一小时付你1万美元，比律师（收费）都贵。我说，我没有心情拿你1万美元跟你讲这个所谓上庭的经验。包括两个骗子的案子在法庭上你看看七哥的表现。很多律师回来说，嗯，还行吧。我说一定会赢，我有把握一定赢。（当时）没有一个律师相信我们会赢。那两个骗子对我们的攻击，那个流氓那个嘴脸，他们找的这个律师事务所也是吴征付的钱，就是美国司法部副部长律师事务所。那个律师那个流氓性，哇塞！简直是胡扯八蛋到了极点了。你看，七哥怎么跟他对付的，光那个案子耗费掉的精力，任何人受不了。他全输了。
 
-视频制作及上传：Cindy；
+你们想过吗？兄弟姐妹们？所以说，现在，**我了解了美国的司法制度、它的行政制度、它的立法制度，以及参议员制度之后，这个国家真的是太伟大。**但是，另外的一面的官僚，实在是美国所有问题的根本所在。这个国家法律，它最牛的是独立的立法和独立的司法执行系统。**但是，法律是建立在有信仰的社会上它管用，一旦没有信仰，它完全一点用都没有了。**就好比用麻绳绑黄牛，是在黄牛不挣扎的情况下，麻绳绑黄牛管用；如果黄牛挣扎了，这个绳是挡不住它的。就是说，法律道德是在有信仰的社会是完全管用的，如果没有信仰就完了。美国是信仰立国的基督教国家。现在西方由于大量的新移民来自不同国家，特别共产党这帮孙子来了以后，在美国大量地摧毁了作为美国立法基础的信仰。一个96%人口有信仰的国家，人民在逐渐怀疑这种信仰，这就麻烦了。
 
-G-News发布：小满；
+所以，现在资本主义带来的腐败结果，导致官僚主义和腐败的结合。就这三份文件拿出来，它也不见得有什么效果，它最终要等待着付出惨重的代价啊，它才能最终纠偏！这是西方输给中共国最根本的原因。资本主义，这个重商主义，还有这个金钱至上导致信仰丢失，把自己的法律的系统彻底给摧毁。最后付出代价以后再来纠偏，这就是现在正在发生的。所以，美国要靠哪一个人去挡住中共这列必将倾覆的火车，希望很渺小（亟待整个社会的觉醒）。
 
-**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；欢迎关注盖特独家文贵先生大直播精选发布账号：**[**@MilesGuolive1**](https://gettr.com/user/MilesGuolive1)
+资料来源：郭先生GTV、盖特直播
 
-声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
+*发布： 盘古相聚*
 
-欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
-
-Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
-
-YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
-
-G-News：[jgalaxy2021foreign laguages](https://gnews.org/author/jgalaxy2021/)、 [喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
-
-盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
-
-推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
-
-G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/76QVRChsgU)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
