--- a/gnews/30.md
+++ b/gnews/30.md
@@ -1,21 +1,31 @@
 ---
-title: 新中国联邦2022年发展的三个重点项目
+title: 2022年2月6日 晚 新中国联邦新闻、GTV新闻访谈简报
 ---
-`首尔天池农场` [轉載自GNews](https://gnews.org/zh-hans/1967766/)
+`纽约香草山MOS01` [轉載自GNews](https://gnews.org/zh-hans/1968020/)
 
-撰稿：追着曙光跑
+作者：香草山翻译部
 
-2月6日，郭先生在大直播上强调，新中国联邦今年2022年发展的三个重点项目。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/WhatsApp-Image-2022-02-07-at-10.25.58.jpeg)
-第一，阻止排华事件的发生，这是新中国联邦今年的重中之重。如果新中国联邦阻止不了西方的排华，那么灭共了也没什么意义。现在需要用币招鼓励国内的各界人士站出来形成全国灭共的趋势，让他们在灭共中真正得到喜币和躺平币。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/GNEW-GTV-MOS-LOGO-3.jpg)
 
-第二，把现有的项目做强做大，坚决不犯希特勒因无限扩张导致灾难性后果的错误。今年不会再立任何新项目，目标就是把现有的项目搞好做强，然后扩大在全球的影响力。
 
-第三、做好新中国联邦教育（GEDU）。教育是立国之本，是中国人未来的希望。新中国联邦会提供喜币或喜美元，吸引国内的教育工作者加入GEDU。套用一句俗语：走新东方的路，让新东方无路可走。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/text-SC-5.png)
+校对：Stay文苑
 
-2022年，新中国联邦无论是在国际还是在国内的影响力将会更强。
+编辑：Stay文苑
 
-信息来源：[2022年2月6日 文贵大直播：开幕式后普京愤然离去；中俄战略合作虎头蛇尾；贩卖人口中国妇女地位；反疫苗运动及美国经济](https://gtv.org/video/id=61ffc26b3621aa7415d64d51)
+发稿：Stay文苑
+
+新闻： [https://gtv.org/broadcast/watch/620076043621aa7415d6dac6](https://gtv.org/broadcast/watch/620076043621aa7415d6dac6)
+访谈： [https://gtv.org/broadcast/watch/62007fd13621aa7415d6e11d](https://gtv.org/broadcast/watch/62007fd13621aa7415d6e11d)
+
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-callendar.jpeg)
+
+**更多资讯，更多关注**
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
 
  
 
