--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,23 +1,27 @@
 ---
-title: 樱花头条┃拜登政府正准备公布首个亚太地区经济战略
+title: 以色列逐渐废除疫苗护照
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968282/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968308/)
 
-撰稿：东京樱花团/樱花传媒
+撰稿：东京樱花团/立正道
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/拜登政府正准备公布首个亚太地区经济战略.jpg)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/以色列逐渐废除疫苗护照.png)图片来源于本文视频截图
 
-在中共不断扩大地区影响力的大背景下，这份经济战略一直为美国盟友和美国商业团体所期待。
+随着中共病毒（新冠病毒Covid-19）感染人数的下降，以色列放宽规定，许多地方不再需要出示疫苗接种证明。
 
-《华尔街日报》说，拜登政府将新的印太框架视为美国努力超越安全关系以对抗中共在亚洲日益增长的野心的重要一步。
+在以色列，从7日起，在餐厅、电影院、健身房、酒店等场所，不再需要出示“绿色通行证”的疫苗接种证明。尽管一些室内集会活动场所和俱乐部仍然需要“绿色疫苗护照”，但将取消对户外聚会和商业设施人数的限制以及对餐厅餐桌间距的限制。
 
-信息来源：[https://gettr.com/post/psyhjhed64](https://gettr.com/post/psyhjhed64)
+卫生部解释说，感染高峰正在过去，即使接种过疫苗的人也会感染Omicron毒株，因此已经失去了监管的有效性。
 
-*编辑：东京樱花团/keyboard racing
+在以色列，上月底每天新增感染人数超过8.3万人，但最近已降至3.3万人左右。
+
+信息来源：
+
+[イスラエル　レストランなどワクチン接種証明不要に](https://news.tv-asahi.co.jp/news_international/articles/000244027.html)
+
+*编辑：东京樱花团/知了知了
 发布：东京樱花团/老黑*
-
 ![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
-
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
