--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,45 +1,50 @@
 ---
-title: 今天下午 5 点，所有自由车队卡车和平的撤离了魁北克市中心
+title: 爆料革命五年最大感受灭共容易让中国人心变好难于登天
 ---
-`温哥华圆成农场🇨🇦` [轉載自GNews](https://gnews.org/zh-hans/1968252/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1968295/)
 
-2022-02-06
+G-TV视频链接：[https://gtv.org/video/id=62007b1d585ecc15d73e584f](https://gtv.org/video/id=62007b1d585ecc15d73e584f)
 
-作者：16626
-![](https://assets.gnews.org/wp-content/uploads/2022/02/D2AEMGLRNIIJQ3NCNTG.png)图片来源：[Tous les camions ont quitté le centre-ville de Québec](https://www.tvanouvelles.ca/2022/02/06/tous-les-camions-ont-quitte-le-centre-ville-de-quebec)
-#### 下午 5 点，最后一批自由车队卡车和平地撤离了魁北克市中心
+**郭文贵先生：**你说这五年，你往回看这感受，你见过咱爆料革命从第一天到今天除了咱们这些战友之外，有几个中国人认为海航是邪恶的？王岐山是邪恶的？孟建柱邪恶？孙力军邪恶？没有人！除了被害者之外！
 
-TVA Nouvelles（2022年2月6日，下午5点46分）发表一篇题为《所有卡车已经撤离了魁北克市中心》的文章报道，今天下午 5 点，在围观的示威者的掌声中，最后一批自由车队卡车和平地撤离了魁北克市中心，自由车队称计划在两周内返回魁北克市。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/@8I_LDVCD1C88G0SFQPC.png)图片来源：[Tous les camions ont quitté le centre-ville de Québec](https://www.tvanouvelles.ca/2022/02/06/tous-les-camions-ont-quitte-le-centre-ville-de-quebec)
-#### 最后一批停在勒内-莱维斯克大道（boulevard René-Lévesque）上的卡车在围观的示威者的欢呼声中离开了
+雅各他家被欺负，他是仇恨当头。如果不是，他不认识这人是邪恶的，在中国，因为他没动我，海航也没海航我，王岐山也没“王”我，孟建柱也没“孟”我，我干嘛恨他？就咱中国人那邻居家能死人、被强奸、被轮奸，绝对视若无物。没有比中国人这心再冷的了。没有比中国人这心再冷的了。
 
-魁北克市警察局警告卡车抗议者，下午 5 点（2022年2月6日）后将不再允许车辆通行，那些不离开的卡车将被罚款，甚至被拖走，“以避免（构成）继续违章犯罪”。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/O81SPCGAMHI@ROA@AGK.png)图片来源：[EN IMAGES | Convoi à Québec: la police ne tolère aucun écart](https://www.tvanouvelles.ca/2022/02/03/en-images--convoi-a-quebec-la-police-ne-tolere-aucun-ecart)
-在（2022年2月6日）下午 5 点后不久，在最后一批（围观的）示威者的掌声中，所有卡车都和平地离开了（示威）现场
-![](https://assets.gnews.org/wp-content/uploads/2022/02/WSHBDPZQ25IPKIB1XO.png)图片来源：[EN IMAGES | Convoi à Québec: la police ne tolère aucun écart](https://www.tvanouvelles.ca/2022/02/03/en-images--convoi-a-quebec-la-police-ne-tolere-aucun-ecart)
-#### “自由车队”在两周内重新返回
+这为啥我们说台湾好？为啥我们说香港好？你到香港去，同类，你就能看到香港人，过去罗湖关，我听到最多的，过去这几十年，每个人都说：哎呀文贵呀，过了这个河，咋就天地不同呢？当年去台湾，一飞几个小时到那转悠回来，后来直通以后到台湾，为啥人家台湾的男的女的都看上去那么顺眼呢？不是别的，是人心！中国人的脑子坏了，中国人的人心坏了。
 
-然而，魁北克“自由车队”的组织者计划在两周内重新返回，以“给勒戈Legault（做出）让步的时间”，并制作一个以“自由”为主题的“伍德斯托克（伍德斯托克音乐艺术节）”。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/04M3JKIEGY8LFFVW.png)图片来源： 截屏于[Rendez-vous dans 2 semaines: quitter pour mieux revenir](https://www.tvanouvelles.ca/2022/02/06/rendez-vous-dans-2-semaines-bernard-rambo-gauthier-demande-aux-manifestants-de-quitter)图中显示伯纳德-“兰博”-高德（Bernard «Rambo» Gauthier，魁北克工会代表和魁北克“自由车队”的组织者）在演讲
-“我们今晚就走，但我们会在两星期后回来[…]。你有 15 天的时间来准备 […]，（回来时）我们会有更多的人”，伯纳德-“兰博”-高德（Bernard «Rambo» Gauthier，魁北克工会代表和魁北克“自由车队”的组织者）周五下午（2022年2月4日）这样说。
+所以咱五年的爆料革命，不是共产党最难，真的是中国的人心！就这个授权撤离，都让七哥都不知道咋好了我都。刚才那个罗西讲了他师父的事情，让人感动。他有师父，中国人哪有求师父的？爹妈都不要了，还要什么师父？中国你见什么师父？师父是利用的，学生也是利用的，谁管你什么师父？没大没小、没老没少、没内没外，一切就是利益，就一切！宗教也是这样，一切都是利益！
 
-另外，Gnews（2022 年 2 月 5 ）发表一篇题为《[自由车队：在新平台上筹集的资金已超过90万元](https://gnews.org/zh-hans/1963141/)》的文章报道，在 GoFundMe 拒绝向全国各地示威反对强制接种疫苗的卡车司机支付筹集的资金后，他们（卡车司机）转向另一个平台，而且已经筹集了近 100 万元。
+你今天你把我问在这，问到今天五周年，七哥最感慨的事：灭共容易，想让中国人心变好难上加难！比登天、比登太阳系都难！所以说这是灭了共产党，灭一万回共产党，我也不会回中国活着去。我宁可在，真的在美国当狗，美国人明天就是我在大街上当狗去，我吃着狗粮，最起码我知道它没有化学的。
 
-## 请读者学习2月6号郭先生Gettre视频
+我觉得除了中南坑，中国人没有一个粮食没有化学的。我在这块儿当狗，我也不会回中国去。还搞什么政治，新中国联邦接管，去吧，你爱谁接管谁接管，剩下内战。你八次内战，跟我都没有关系，我只负责把共产党——我肯定把它灭了。这是发自内心的，我就这么直接。
 
-2月6号郭先生发表了题为《[尊敬的战友们好！关于如何使用GTV帮助加拿大卡车反疫苗运动的几点声明！](https://gettr.com/post/pswoyr9fbf)》的Gettre视频。
+字幕来源：[2022年1月27日 文贵大直播 全文字版](https://gnews.org/zh-hans/1924957/)
 
-这次卡车司机的行动背后的政治博弈非常激烈。请读者，特别是身处北美的战友，记住，新中国联邦人是有信仰，有底线的，一定要坚持，为真不破，报道真相，不煽动或鼓励暴力。相信郭先生完全有能力和智慧以和平方式消灭世界的一切不公平。欢迎读者访问并在“[加拿大温哥华圆成农场](https://gettr.com/user/himalayavang)”上留言。
+编辑整理：Jacques；
 
-参考链接：
-[Tous les camions ont quitté le centre-ville de Québec](https://www.tvanouvelles.ca/2022/02/06/tous-les-camions-ont-quitte-le-centre-ville-de-quebec)
+字幕文件制作：大好河山；
 
-编辑：LILY
-发布：肥鯮
+视频制作及上传：Cindy；
 
-更多资讯请关注：
-[温哥华圆成农场GTV频道](https://gtv.org/user/5f30d3ff91d4727c6a88395d)｜[温哥华圆成农场官方盖特](https://www.gettr.com/user/himalayavang)｜[温哥华圆成农场Discord服务器](https://discord.gg/8RMGcwT8)
-![](https://assets.gnews.org/wp-content/uploads/2021/11/%E8%BE%B2%E5%A0%B4%E6%96%87%E5%AE%A3-3.jpg)
+G-News发布：小满；
+
+**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；欢迎关注盖特独家文贵先生大直播精选发布账号：**[**@MilesGuolive1**](https://gettr.com/user/MilesGuolive1)
+
+声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
+
+欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
+
+Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
+
+YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
+
+G-News：[jgalaxy2021foreign laguages](https://gnews.org/author/jgalaxy2021/)、 [喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
+
+盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
+
+推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
+
+G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
