--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,32 +1,16 @@
 ---
-title: 近三千名维州学生在开学第一周新冠检测呈阳性
+title: 一帘幽梦的缘起
 ---
-`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/1968251/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1968294/)
 
-翻译&评论：金生水
-![](https://assets.gnews.org/wp-content/uploads/2022/02/4-12.png)图片来自网络
-澳大利亚媒体《ABC News》近日报道，在维多利亚州学校开学的第一周，超过 2900 名学生和 400 多名教师的中共病毒检测呈阳性。
+文编：东京樱花团/樱花传媒
+视频：东京樱花团/中文小视频组
 
-“我们看到“新冠检测呈阳性”的学龄人群有所增加，”马特森女士（澳大利亚卫生部副部长）说。
+2月1日，郭文贵先生在GTV大直播透露，一帘幽梦这首歌缘起于被救助的战友，是上天派这位战友送来的缘分。由郭文贵先生演唱的这首一帘幽梦，让文贵先生过去的老同事们感到幸福，也鼓励着他们对中共永不妥协的决心。每个人都要懂得，人生最重要的是一定要有信仰。
 
-“这并不意外。”
-
-政府“强烈建议”主流学校的教师和学生每周做两次快速抗原检测（RAT）、特别教学场合每天一次快速抗原检测。
-
-这些病例中，许多都是在上述快速抗原检测中测出来的。
-
-目前约有 110 万学生就读于维多利亚州的学校。
-
-尽管感染人数激增，但没有学校关闭，接触者追踪旨在保持教室开放。
-
-马特森女士说，随着人们在社区内活动的增加，该部门预计病例数将保持在目前的水平。
-
-快速抗原检测（RAT）的检测结果并不准确，而且还有很多人选择不做检测。所以真实准确的确诊数字一定数倍于官方报道的数据，政府预计病例数能够保持在目前的水平完全是自欺欺人。这是一个特殊时期，建议各位家长让自己的孩子呆在家中自主学习，千万不要去学校，一旦孩子不慎感染则悔之晚矣！
-
-参考链接：
-
-[https://www.abc.net.au/news/2022-02-05/victoria-records-new-covid-cases-deaths-and-hospitalisations/100807284](https://www.abc.net.au/news/2022-02-05/victoria-records-new-covid-cases-deaths-and-hospitalisations/100807284)
-![](https://assets.gnews.org/wp-content/uploads/2022/02/澳喜图标2-1.jpg)
+*编辑：东京樱花团/tdownc2p
+发布：东京樱花团/ 平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
